Fixed alignment issues

--- a/features/org.wso2.carbon.appmgt.store.feature/src/main/resources/store/themes/store/css/custom-styles.css
+++ b/features/org.wso2.carbon.appmgt.store.feature/src/main/resources/store/themes/store/css/custom-styles.css
@@ -95,7 +95,7 @@
 }
 
 .asset-reinstall-btn, .asset-unsubscribe-btn, .asset-reinstall-btn-direct, .asset-myapps-btn{
-    margin-left: 20%;
+    margin-left: 10%;
     margin-right: auto;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -439,4 +439,17 @@
     border: none;
     border-radius : 0;
     min-height: 53px;
+}
+
+
+.dataTables_wrapper{
+    padding-top: 20px
+}
+
+.dataTables_filter{
+    padding-bottom: 10px;
+}
+
+.paging_two_button a{
+    padding-right: 20px;
 }
